--- a/lib/capistrano/templates/hutch.service.capistrano.erb
+++ b/lib/capistrano/templates/hutch.service.capistrano.erb
@@ -11,7 +11,7 @@ Description=hutch for <%= "#{fetch(:application)} (#{fetch(:stage)})" %>
 After=syslog.target network.target
 
 [Service]
-Type=notify
+Type=simple
 <%="User=#{hutch_user}" if fetch(:hutch_systemctl_user) == :system %>
 WorkingDirectory=<%= current_path %>
 ExecStart=<%= expanded_bundle_path %> exec hutch <%= hutch_config %>
